--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,12 @@ NODE_ENV=development
 APP_KEY=LJS6-bTVEmisYE4_gnbD4w2I8pQpS1d3
 DRIVE_DISK=local
 DB_CONNECTION=mysql
-MYSQL_HOST=localhost
+MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
 MYSQL_USER=lucid
 MYSQL_PASSWORD=
 MYSQL_DB_NAME=lucid
-PG_HOST=localhost
+PG_HOST=127.0.0.1
 PG_PORT=5432
 PG_USER=lucid
 PG_PASSWORD=
